# sdl2-snake

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  run.sh
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
include/: game.hpp  sdl_utils.hpp
include/snake/: audio.hpp  direction.hpp  game.hpp  game_object.hpp  path_point.hpp  player.hpp  sdl_includes.hpp  tail_node.hpp  tilemap.hpp  utils.hpp
scripts/: README.md  build.sh  clean.sh  cmake.sh  cmake_xcode.sh  cppcheck.sh  deps.sh  rebuild.sh  run.sh  test.sh  travis.sh
src/: game.cpp  main.cpp
src/snake/: audio.cpp  game.cpp  game_object.cpp  player.cpp  tail_node.cpp  tilemap.cpp
test/: main_test.hpp  run_tests.cpp
